--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 class="heading">Google Meet</h1><br>
-  <div id="search-container">
-    <input type="text" id="search" placeholder="Search participants" onkeyup="filterParticipants()">
-  </div>
+  <header>
+    <h1 class="heading">Google Meet</h1>
+  </header>
+  <main>
+    <div id="search-container">
+      <input type="text" id="search" placeholder="🔍 Search participants" onkeyup="filterParticipants()">
+    </div>
 
-  <div id="participants-container"></div>
-
+    <section id="participants-container" aria-label="Participants List"></section>
+  </main>
   <script src="script.js"></script>
 </body>
 </html>
